@@ -3,7 +3,6 @@ package com.prismworks.prism.domain.project.service;
 import com.prismworks.prism.domain.auth.model.UserContext;
 import com.prismworks.prism.domain.peerreview.model.PeerReviewResult;
 import com.prismworks.prism.domain.peerreview.model.PeerReviewTotalResult;
-import com.prismworks.prism.domain.peerreview.repository.PeerReviewResponseHistoryRepository;
 import com.prismworks.prism.domain.peerreview.repository.PeerReviewResultRepository;
 import com.prismworks.prism.domain.peerreview.repository.PeerReviewTotalResultRepository;
 import com.prismworks.prism.domain.project.Repository.CategoryRepository;
@@ -16,10 +15,12 @@ import com.prismworks.prism.domain.project.model.Category;
 import com.prismworks.prism.domain.project.model.Project;
 import com.prismworks.prism.domain.project.model.ProjectCategoryJoin;
 import com.prismworks.prism.domain.project.model.ProjectUserJoin;
+import com.prismworks.prism.domain.user.dto.UserDto;
 import com.prismworks.prism.domain.user.model.Users;
 import com.prismworks.prism.domain.user.repository.UserRepository;
+import com.prismworks.prism.domain.user.service.UserService;
+
 import org.hibernate.Hibernate;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -31,21 +32,19 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+
+@RequiredArgsConstructor
 @Service
 public class ProjectService {
 
-    @Autowired
-    private CategoryRepository categoryRepository;
-    @Autowired
-    private UserRepository userRepository;
-    @Autowired
-    private ProjectRepository projectRepository;
-    @Autowired
-    private ProjectUserJoinRepository projectUserJoinRepository;
-    @Autowired
-    private PeerReviewResultRepository peerReviewResultRepository;
-    @Autowired
-    private PeerReviewTotalResultRepository peerReviewTotalResultRepository;
+    private final CategoryRepository categoryRepository;
+    private final UserRepository userRepository;
+    private final UserService userService;
+    private final ProjectRepository projectRepository;
+    private final ProjectUserJoinRepository projectUserJoinRepository;
+    private final PeerReviewResultRepository peerReviewResultRepository;
+    private final PeerReviewTotalResultRepository peerReviewTotalResultRepository;
 
     @Transactional
     public Category saveCategoryTransactional(String name) {
@@ -114,7 +113,7 @@ public class ProjectService {
             join.setRoles(memberDto.getRoles());
             join.setAnonyVisibility(true);
             join.setPeerReviewDone(false);
-            foundUser.ifPresentOrElse(join::setUser, () -> {;});
+            foundUser.ifPresentOrElse(join::setUser, () -> {});
             return join;
         }).collect(Collectors.toList());
 
@@ -228,7 +227,7 @@ public class ProjectService {
                     }
                     return join;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         if (project.getMembers() != null) {
             project.getMembers().clear();
@@ -270,17 +269,17 @@ public class ProjectService {
 
         projectRepository.delete(project);
         return ProjectResponseDto.builder()
-                .projectId(project.getProjectId())
-                .projectName(project.getProjectName())
-                .projectDescription(project.getProjectDescription())
-                .organizationName(project.getOrganizationName())
-                .memberCount(project.getMemberCount())
-                .categories(project.getCategories())
-                .skills(project.getSkills())
-                .startDate(project.getStartDate())
-                .endDate(project.getEndDate())
-                .projectUrlLink(project.getProjectUrlLink())
-                .build();
+            .projectId(project.getProjectId())
+            .projectName(project.getProjectName())
+            .projectDescription(project.getProjectDescription())
+            .organizationName(project.getOrganizationName())
+            .memberCount(project.getMemberCount())
+            .categories(project.getCategories())
+            .skills(project.getSkills())
+            .startDate(project.getStartDate())
+            .endDate(project.getEndDate())
+            .projectUrlLink(project.getProjectUrlLink())
+            .build();
     }
 
     @Transactional(readOnly = true)
@@ -366,7 +365,7 @@ public class ProjectService {
         );
         int surveyParticipant = projectUserJoinRepository.getSurveyParticipant(project.getProjectId());
 
-        String evaluation = "";
+        String evaluation;
 
         if(peerReviewTotalResult == null){
             evaluation = "총평 데이터 없음";
@@ -401,7 +400,7 @@ public class ProjectService {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> ProjectException.PROJECT_NOT_FOUND);
 
-        if (!project.getMembers().stream().anyMatch(member -> member.getEmail().equals(myEmail))) {
+        if (project.getMembers().stream().noneMatch(member -> member.getEmail().equals(myEmail))) {
             throw new ProjectException("You are not a member of this project", ProjectErrorCode.UNAUTHORIZED);
         }
 
@@ -462,7 +461,16 @@ public class ProjectService {
                         // 로깅, 오류 처리 또는 기본값 설정
                         return new MemberDetailDto("-1", member.getName(), member.getEmail(), member.getRoles(), member.getAnonyVisibility());
                     } else {
-                        return new MemberDetailDto(member.getUser().getUserId(), member.getName(), member.getEmail(), member.getRoles(), member.getAnonyVisibility());
+                        UserDto.UserProfileDetail userProfileDetail = userService.getUserProfileDetail(member.getUser().getUserId());
+
+                        return MemberDetailDto.builder()
+                            .name(userProfileDetail.getUsername())
+                            .email(userProfileDetail.getEmail())
+                            .interestDomains(userProfileDetail.getInterestJobs())
+                            .introduction(userProfileDetail.getIntroduction())
+                            .roles(member.getRoles()) // 역할 정보 설정
+                            .projectCount(getProjectCount(member.getUser().getUserId())) // 프로젝트 수 계산
+                            .build();
                     }
                 })
                 .collect(Collectors.toList());
@@ -477,7 +485,7 @@ public class ProjectService {
                 .projectUrlLink(project.getProjectUrlLink())
                 .urlVisibility(project.getUrlVisibility())
                 .projectDescription(project.getProjectDescription())
-                .mostCommonTraits("계산로직 미구현 하드코딩")
+                .mostCommonTraits("")
                 .categories(project.getCategories().stream().map(c -> c.getCategory().getName()).collect(Collectors.toList()))
                 .skills(project.getSkills())
                 .members(memberDetails)
@@ -526,9 +534,7 @@ public class ProjectService {
 
         updatedMember.setEmail(userContext.getEmail());
         userRepository.findById(userContext.getUserId())
-                .ifPresentOrElse(user -> {
-                    updatedMember.setUser(user);
-                }, () -> {
+                .ifPresentOrElse(updatedMember::setUser, () -> {
                     throw new ProjectException("User not found with given ID", ProjectErrorCode.USER_NOT_FOUND);
                 });
 
@@ -624,6 +630,34 @@ public class ProjectService {
                 .ownerName(ownerName)
                 .notReviewingMemberEmails(notReviewingMemberEmails)
                 .build();
+    }
+
+    public List<MemberDetailDto> getProjectMembers(Integer projectId) {
+        List<ProjectUserJoin> projectUserJoins = projectUserJoinRepository.findByProjectId(projectId);
+
+        projectUserJoins.forEach(join -> {
+            Hibernate.initialize(join.getRoles());
+        });
+
+        return projectUserJoins.stream()
+            .map(join -> {
+
+                UserDto.UserProfileDetail userProfileDetail = userService.getUserProfileDetail(join.getUser().getUserId());
+
+                return MemberDetailDto.builder()
+                    .name(userProfileDetail.getUsername())
+                    .email(userProfileDetail.getEmail())
+                    .interestDomains(userProfileDetail.getInterestJobs())
+                    .introduction(userProfileDetail.getIntroduction())
+                    .roles(join.getRoles())
+                    .projectCount(getProjectCount(join.getUser().getUserId()))
+                    .build();
+            })
+            .collect(Collectors.toList());
+    }
+
+    private int getProjectCount(String userId) {
+        return projectUserJoinRepository.countByUserId(userId);
     }
 
     @Transactional
